Сделано ДЗ 4.4 Логирование и конфигурирование приложении

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url= jdbc:h2:mem:hogwarts
 spring.datasource.username= student
 spring.datasource.password= chocolatefrog
 avatars.dir.path = /avatars
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
