--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 avatars.dir.path = /avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+server.port=8080
+logging.level.ru.hogwarts.school=info
